--- a/templates/recetas_app/acerca_de.html
+++ b/templates/recetas_app/acerca_de.html
@@ -29,21 +29,21 @@
             <div class="team-members">
                 <div class="team-member-card">
                     <img src="{% static 'img/chef_placeholder.png' %}" alt="Chef Placeholder" class="team-member-image">
-                    <h3 class="team-member-name">Chef Isabella Rossi</h3>
+                    <h3 class="team-member-name">María Luz Verón</h3>
                     <p class="team-member-role">Fundadora y Chef Principal</p>
                     <p class="team-member-bio">Con más de 20 años de experiencia en la cocina mediterránea, Isabella es el corazón de El Recetario. Su pasión por los ingredientes frescos y las técnicas tradicionales es contagiosa.</p>
                 </div>
                 <div class="team-member-card">
                     <img src="{% static 'img/food_writer_placeholder.png' %}" alt="Food Writer Placeholder" class="team-member-image">
-                    <h3 class="team-member-name">Marco Bianchi</h3>
+                    <h3 class="team-member-name">Gonzalo Sotomayor</h3>
                     <p class="team-member-role">Redactor Culinario Senior</p>
-                    <p class="team-member-bio">Marco es nuestro experto en historias detrás de los platos. Su habilidad para transformar una receta en una narrativa cautivadora hace que cada lectura sea una delicia.</p>
+                    <p class="team-member-bio">Gonzalo es nuestro experto en historias detrás de los platos. Su habilidad para transformar una receta en una narrativa cautivadora hace que cada lectura sea una delicia.</p>
                 </div>
                 <div class="team-member-card">
                     <img src="{% static 'img/developer_placeholder.png' %}" alt="Developer Placeholder" class="team-member-image">
-                    <h3 class="team-member-name">Sofía García</h3>
+                    <h3 class="team-member-name">Romano Rocio Soledad</h3>
                     <p class="team-member-role">Desarrolladora Web</p>
-                    <p class="team-member-bio">Sofía es la mente detrás de la experiencia de usuario. Se asegura de que El Recetario sea fácil de navegar, rápido y visualmente atractivo en todos los dispositivos.</p>
+                    <p class="team-member-bio">Rocio es la mente detrás de la experiencia de usuario. Se asegura de que El Recetario sea fácil de navegar, rápido y visualmente atractivo en todos los dispositivos.</p>
                 </div>
             </div>
         </div>
