Nosotros /acerca de

--- a/templates/recetas_app/acerca_de.html
+++ b/templates/recetas_app/acerca_de.html
@@ -35,15 +35,27 @@
                 </div>
                 <div class="team-member-card">
                     <img src="{% static 'img/food_writer_placeholder.png' %}" alt="Food Writer Placeholder" class="team-member-image">
-                    <h3 class="team-member-name">Gonzalo Sotomayor</h3>
+                    <h3 class="team-member-name">Gonzalo Leonel Sander Sotomayor</h3>
                     <p class="team-member-role">Redactor Culinario Senior</p>
                     <p class="team-member-bio">Gonzalo es nuestro experto en historias detrás de los platos. Su habilidad para transformar una receta en una narrativa cautivadora hace que cada lectura sea una delicia.</p>
                 </div>
                 <div class="team-member-card">
                     <img src="{% static 'img/developer_placeholder.png' %}" alt="Developer Placeholder" class="team-member-image">
-                    <h3 class="team-member-name">Romano Rocio Soledad</h3>
+                    <h3 class="team-member-name">Rocio Soledad Romano</h3>
                     <p class="team-member-role">Desarrolladora Web</p>
                     <p class="team-member-bio">Rocio es la mente detrás de la experiencia de usuario. Se asegura de que El Recetario sea fácil de navegar, rápido y visualmente atractivo en todos los dispositivos.</p>
+                </div>
+                <div class="team-member-card">
+                    <img src="{% static 'img/developer_placeholder.png' %}" alt="Developer Placeholder" class="team-member-image">
+                    <h3 class="team-member-name">Genez Bruno Emanuel</h3>
+                    <p class="team-member-role">Fotógrafo Culinario</p>
+                    <p class="team-member-bio">Bruno es el artista visual del equipo. Se encarga de que cada plato no solo sepa bien, sino que también luzca increíble, capturando la esencia y el color de cada receta.</p>
+                </div>
+                <div class="team-member-card">
+                    <img src="{% static 'img/developer_placeholder.png' %}" alt="Developer Placeholder" class="team-member-image">
+                    <h3 class="team-member-name">Valentino Salvador Acosta</h3>
+                    <p class="team-member-role">Especialista en Marketing Digital</p>
+                    <p class="team-member-bio">Valentino es el encargado de que las recetas lleguen a tu pantalla. Con estrategias de marketing, se asegura de que la comunidad de El Recetario crezca día a día.</p>
                 </div>
             </div>
         </div>
